--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width", initial-scale="1.0">
+        <link rel="stylesheet" href="style.css">
         <title>My Webpage | Landing Page</title>
     </head>
     <body>
@@ -29,7 +30,7 @@
                     Paragraph Area
                 </p>
                 <form>
-                    <input type="text" placeholder="form text input here" />
+                    <input type="text" placeholder="form text input here">
                     <button type="submit">Submit Button</button>
                 </form>
             </div>
