--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     </head>
     <body>
         <nav>
-            <div class="nav__logo"><a href="#">Learning</a></div>
+            <div class="nav__logo"><a href="#">Welcome to my page</a></div>
             <ui class="nav__links">
-                <li class="link"><a href="#">Home</a></li>
                 <li class="link"><a href="#">About</a></li>
                 <li class="link"><a href="#">Contact</a></li>
+                <li class="link"><a href="#">Users</a></li>
                 <li class="link"><a href="#" class="nav__btn">Register</a></li>
             </ui>
         </nav>
