resize and add hover to img

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </div>
             <div class="image__container">
                 <img src="assets/neutral_face.jpg" alt="header">
-                <img src="assets/happy_face.jpg" alt="header">
+                <!-- <img src="assets/happy_face.jpg" alt="header"> -->
                 <div class="image__content">
                     <ul>
                         <li>Insert Text Here 1</li>
