create 2 more page

--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     </head>
     <body>
         <nav class="navbar">
-            <div class="nav-logo"><a href="#">WELCOME</a></div>
+            <div class="nav-logo"><a href="index.html">WELCOME</a></div>
             <ui class="nav-links">
-                <li class="link"><a href="#">About</a></li>
-                <li class="link"><a href="#">Experiences</a></li>
-                <li class="link"><a href="#">View Account</a></li>
+                <li class="link"><a href="about.html">About</a></li>
+                <li class="link"><a href="experiences.html">Experiences</a></li>
+                <li class="link"><a href="#" class="debug-link">View Account</a></li>
                 <li class="link"><a href="#" class="nav-btn">Test Account</a></li>
             </ui>
         </nav>
@@ -28,15 +28,15 @@
                     <span class="subText">Thai</span><br>
                 </h1>
                 <p class="paragraphText"><br>
-                    Born in Thailand, Angthong Hospital and raised in Kanchanaburi. <br>
-                    <br> Study focus on Computer and English as a teen and graduated from
-                    Kasetsart University, Computer Engineering, Software and Knowledge. <br>
-                    <br> After going through gap year and ordained as a monk, I'm back to coding in 2024. <br>
-                    <br> My coding skill are already rusty, but my will to learn are not. <br>
-                    <br> All hail all to the indian programmers on the internet. <br>
+                    Born in Thailand, Angthong Hospital and raised in Kanchanaburi.<br>
+                    <br>Study focus on Computer and English as a teen and graduated from
+                    Kasetsart University, Computer Engineering, Software and Knowledge.<br>
+                    <br>After going through gap year and ordained as a monk, I'm back to coding in 2024.<br>
+                    <br>My coding skill are already rusty, but my will to learn are not.<br>
+                    <br>All hail to all the indian programmers on the internet.<br>
                 </p>
             </div>
-            <div class="slide-container">
+            <div class="imgSlide-container">
                 <img class="mySlides w3-animate-right" src="assets/neutral_face.jpg">
                 <img class="mySlides w3-animate-right" src="assets/happy_face.jpg">
             </div>
