redo my webpage

--- a/about.html
+++ b/about.html
@@ -1,62 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width", initial-scale="1.0">
-        <link rel="stylesheet" href="style.css">
-        <title>My About | Home Page</title>
-    </head>
+        <title>About page</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="./styles.css"/>
+        </head>
     <body>
-        <nav class="navbar">
-            <div class="nav-logo"><a href="index.html">WELCOME</a></div>
-            <ui class="nav-links">
-                <li class="link"><a href="about.html">About</a></li>
-                <li class="link"><a href="experiences.html">Experiences</a></li>
-                <li class="link"><a href="#" class="debug-link">View Account</a></li>
-                <li class="link"><a href="#" class="nav-btn">Test Account</a></li>
-            </ui>
-        </nav>
+        <header>
+            <a href="./index.html" class="logo"><i class="fa-solid fa-house"> H O M E </i></a>
+            <nav>
+                <ul class="nav_links">
+                    <li class="link"><a href="./about.html">About</a></li>
+                    <li class="link"><a href="./experiences.html">Experiences</a></li>
+                    <li class="link"><a href="./projects.html">Projects</a></li>
+                    <a href="./contact.html"><button>Contact</button></a>
+                </ul>
+            </nav>
+        </header>
         <section class="container">
-            <div class="content-container">
-                <h1>Early Life<br>
-                    <span class="subText">High School</span>
-                </h1>
-                <p class="paragraphText">
-                    Study at public school "Visuttarungsri School" as an Intensive Program
-                    then move to a "Potential Program" that more focus less on Mathematic
-                    and Science later on.
-                </p><br><br><br>
-
-                <h1>Learning to program<br>
-                    <span class="subText">University</span>
-                </h1>
-                <p class="paragraphText">
-                    Learned how to code mainly Java and C++ while study at Kasetsart University.
-                    Learned and used software development and basic principles of coding.
-                </p><br><br><br>
-
-                <h1>Adult Life<br>
-                    <span class="subText">Graduated</span>
-                </h1>
-                <p class="paragraphText">
-                    Turned away from coding and finding purpose in doing what I want to do most,
-                    and also ordained as a monk in order to find happiness in life. Now I'm back
-                    returned to coding as usual.
+            <div class="container-content">
             </div>
-            <div class="img-container">
-                <img class="img-container-side" src="assets/placeholder_img.jpg">
-                <img class="img-container-side" src="assets/placeholder_img.jpg">
-                <img class="img-container-side" src="assets/placeholder_img.jpg">
-            </div>
+            <!-- <img class="container-img" src="./assets/placeholder_img3.jpg"> -->
         </section>
-        <section class="contact">
-            <div class="contact-container">
-                <h1>Keetawat Srichompoo<br>
-                <h1>keetawat.s@gmail.com<br>
-                <h1>084-930-7467
+        <footer>
+            <div class="footer-logo">
+                <a href="https://www.facebook.com/sahachart7/" class="facebook-icon"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.instagram.com/ks.muang/" class="instagram-icon"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.youtube.com/channel/UCG4rbPuTOe6bM-3ooFdgELg" class="youtube-icon"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://www.twitter.com/SaltyKeetawat" class="twitter-icon"><i class="fa-brands fa-twitter"></i></a>
             </div>
-        </section>
-        </body>
+        </footer>
     </body>
 </html>
