--- a/index.html
+++ b/index.html
@@ -1,46 +1,43 @@
 <!DOCTYPE html>
-<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width", initial-scale="1.0">
-        <link rel="stylesheet" href="style.css">
-        <title>My Webpage | Home Page</title>
-    </head>
+        <title>Homepage, Hello</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link rel="stylesheet" href="./styles.css"/>
+        </head>
     <body>
-        <nav class="navbar">
-            <div class="nav-logo"><a href="index.html">WELCOME</a></div>
-            <ui class="nav-links">
-                <li class="link"><a href="about.html">About</a></li>
-                <li class="link"><a href="experiences.html">Experiences</a></li>
-                <li class="link"><a href="#" class="debug-link">View Account</a></li>
-                <li class="link"><a href="#" class="nav-btn">Test Account</a></li>
-            </ui>
-        </nav>
+        <header>
+            <a href="./index.html" class="logo"><i class="fa-solid fa-house"> H O M E </i></a>
+            <nav>
+                <ul class="nav_links">
+                    <li class="link"><a href="./about.html">About</a></li>
+                    <li class="link"><a href="./experiences.html">Experiences</a></li>
+                    <li class="link"><a href="./projects.html">Projects</a></li>
+                    <a href="./contact.html"><button>Contact</button></a>
+                </ul>
+            </nav>
+        </header>
         <section class="container">
-            <div class="content-container">
-                <h1>Profile<br>
-                    <span class="mainText">Name: </span>
-                    <span class="subText">Keetawat Srichompoo</span><br>
-                    <span class="mainText">Birthday: </span>
-                    <span class="subText">7 January 1997</span><br>
-                    <span class="mainText">Nationality: </span>
-                    <span class="subText">Thai</span><br>
-                </h1>
-                <p class="paragraphText"><br>
-                    Born in Thailand, Angthong Hospital and raised in Kanchanaburi.<br>
-                    <br>Study focus on Computer and English as a teen and graduated from
-                    Kasetsart University, Computer Engineering, Software and Knowledge.<br>
-                    <br>After going through gap year and ordained as a monk, I'm back to coding in 2024.<br>
-                    <br>My coding skill are already rusty, but my will to learn are not.<br>
-                    <br>All hail to all the indian programmers on the internet.<br>
-                </p>
+            <div class="container-content">
+                <span class="text-top"><br><br><br> Greetings, Viewer<br><br></span>
+                <span class="text-middle">I'm Keetawat Srichompoo.<br></span>
+                <span class="text-bottom">
+                    <br>I studied software developer. Self-taught and highly motivated.
+                    <br>Interesting in computer technology and video editing.
+                </span>
             </div>
-            <div class="imgSlide-container">
-                <img class="mySlides w3-animate-right" src="assets/neutral_face.jpg">
-                <img class="mySlides w3-animate-right" src="assets/happy_face.jpg">
-            </div>
-            <script type = "text/javascript" src="function.js"></script>
+            <img class="container-img" src="./assets/placeholder_img3.jpg">
         </section>
+        <footer>
+            <div class="footer-logo">
+                <a href="https://www.facebook.com/sahachart7/" class="facebook-icon"><i class="fa-brands fa-facebook"></i></a>
+                <a href="https://www.instagram.com/ks.muang/" class="instagram-icon"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://www.youtube.com/channel/UCG4rbPuTOe6bM-3ooFdgELg" class="youtube-icon"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://www.twitter.com/SaltyKeetawat" class="twitter-icon"><i class="fa-brands fa-twitter"></i></a>
+            </div>
+        </footer>
     </body>
 </html>
